<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:nestedScrollingEnabled="false">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_top"
            android:layout_width="350dp"
            android:layout_height="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/top"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_product_from_leica_brand"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="@id/txt_top"
                    app:layout_constraintTop_toBottomOf="@id/txt_top" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_browse_by_brand"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_top">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_browse_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_browse_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_2"
                    android:text="@string/browse_by"
                    android:textColor="#181717"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.7"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3" />

                <Button
                    android:id="@+id/btn_browse_brand"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@drawable/background_color"
                    android:text="@string/brand"
                    android:textColor="#FFFFFF"
                    app:layout_constraintLeft_toLeftOf="@id/txt_browse_brand"
                    app:layout_constraintTop_toBottomOf="@id/txt_browse_brand" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_arrival_view_all"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/card_browse_by_brand">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_latest_arrivals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_4"
                    android:text="@string/latest_arrivals"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_last_arrival_view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/background_color"
                    android:text="@string/view_all"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintLeft_toRightOf="@id/txt_latest_arrivals"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_latest_arrivals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/card_top"
            app:layout_constraintTop_toBottomOf="@id/card_arrival_view_all"
            tools:ignore="MissingConstraints"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_upload_picture"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_latest_arrivals">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_find_picture"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/txt_cannot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_2"
                    android:text="@string/can_t"
                    android:textColor="#EE440E"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1" />

                <TextView
                    android:id="@+id/txt_find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_2"
                    android:text="@string/find"
                    android:textColor="#131110"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/txt_cannot"
                    app:layout_constraintLeft_toRightOf="@id/txt_cannot" />

                <TextView
                    android:id="@+id/txt_what_you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_2"
                    android:text="@string/what_you"
                    android:textColor="#EE440E"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/txt_cannot"
                    app:layout_constraintLeft_toRightOf="@id/txt_find" />

                <TextView
                    android:id="@+id/txt_find_picture"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/looking_for_search_by"
                    android:textColor="#131110"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/txt_cannot"
                    app:layout_constraintLeft_toLeftOf="@id/txt_cannot"/>

                <Button
                    android:id="@+id/btn_find_picture"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/upload_picture"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/background_color"
                    app:layout_constraintLeft_toLeftOf="@id/txt_find_picture"
                    app:layout_constraintTop_toBottomOf="@id/txt_find_picture" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_choose_by_country"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/card_upload_picture">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_choose_by_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_4"
                    android:text="@string/choose_by_country"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_choose_by_country"
            app:layout_constraintLeft_toLeftOf="@id/recycler_latest_arrivals"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_customer_service"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_country">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_customer_service"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/txt_need_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_2"
                    android:text="@string/need_help"
                    android:textColor="#131110"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1" />

                <TextView
                    android:id="@+id/txt_customer_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_2"
                    android:text="@string/customer_service"
                    android:textColor="#020202"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/txt_need_help"
                    app:layout_constraintLeft_toLeftOf="@id/txt_need_help"/>

                <Button
                    android:id="@+id/btn_call_now"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:text="@string/call_now"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/background_color"
                    app:layout_constraintTop_toBottomOf="@id/txt_customer_service"
                    app:layout_constraintLeft_toLeftOf="@id/txt_customer_service"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_popular_products"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/card_customer_service">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_popular_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_4"
                    android:text="@string/popular_products"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_popular_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_popular_products"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>